# tds-project-2

./: .env  README.md  main.py  pyproject.toml
LLMFiles/: runner.py
tools/: image_content_extracter.py
